--- a/app/src/main/res/layout/list_item_product_overview.xml
+++ b/app/src/main/res/layout/list_item_product_overview.xml
@@ -8,7 +8,6 @@
     android:layout_height="56dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:background="?attr/selectableItemBackground"
     app:cardCornerRadius="0dp"
     app:cardElevation="1dp">
 
@@ -17,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/border_grey_bottom">
+        android:background="?attr/selectableItemBackground"
+        android:foreground="@drawable/border_grey_bottom">
 
         <RelativeLayout
             android:layout_width="match_parent"
