--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -78,35 +78,36 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_product_old_price"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.5"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="left"
                     android:maxLines="1"
                     android:padding="5dp"
-                    android:textSize="16dp"
+                    android:textSize="14dp"
                     android:textColor="@color/nameProductColor"
                     app:typeFaceAsset="RobotoLight.ttf"
                     tools:text="16,800"/>
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_product_new_price"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.5"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="2dp"
                     android:gravity="right"
                     android:maxLines="1"
                     android:padding="5dp"
                     android:textColor="@color/salePriceColor"
-                    android:textSize="18dp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     app:typeFaceAsset="RobotoLight.ttf"
                     tools:text="12,600"/>
