--- a/app/src/main/res/layout/drawer_delivery.xml
+++ b/app/src/main/res/layout/drawer_delivery.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:padding="16dp"
+    android:clickable="true"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
