--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,43 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_header_home"
     android:layout_width="match_parent"
     android:layout_height="@dimen/drawer_header_height"
+    android:orientation="horizontal"
     android:paddingEnd="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingStart="16dp"
-    android:background="?attr/selectableItemBackground"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground">
 
-    <LinearLayout
-        android:id="@+id/layout_header_home"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/image_view_logo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:src="@mipmap/ic_logo"/>
 
-        <ImageView
-            android:id="@+id/image_view_logo"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/ic_logo"/>
-
-        <TextView
-            android:id="@+id/txt_view_sign_in"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="@string/home"
-            android:textColor="@color/nameProductColor"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
-    </LinearLayout>
-
-</RelativeLayout>
+    <TextView
+        android:id="@+id/txt_view_sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="20dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="@string/home"
+        android:textColor="@color/nameProductColor"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
+</LinearLayout>
