--- a/app/src/main/res/layout/fragment_avaliable.xml
+++ b/app/src/main/res/layout/fragment_avaliable.xml
@@ -18,7 +18,8 @@
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_filter"
