--- a/app/src/main/res/layout/list_item_product_detail_description.xml
+++ b/app/src/main/res/layout/list_item_product_detail_description.xml
@@ -162,7 +162,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/image_view_logo"
@@ -218,17 +219,17 @@
                 android:stretchMode="columnWidth">
             </cenergy.central.com.pwb_store.view.PowerBuyWrapAbleGridView>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp">
+                android:orientation="horizontal">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/card_view_store"
                     style="@style/RaisedButtonCard"
-                    android:layout_width="180dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="1dp"
                     android:layout_alignParentLeft="true"
                     android:layout_gravity="center_horizontal"
                     android:foreground="?attr/selectableItemBackground"
@@ -241,14 +242,14 @@
                         android:layout_alignParentLeft="true"
                         android:layout_gravity="left|center_vertical"
                         android:src="@drawable/ic_store_white"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="5dp"/>
 
                         <cenergy.central.com.pwb_store.view.PowerBuyTextView
                             style="@style/RaisedButton"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:paddingEnd="20dp"
-                            android:paddingStart="40dp"
+                            android:paddingLeft="5dp"
+                            android:paddingStart="30dp"
                             android:text="@string/product_available"
                             android:textSize="16sp"
                             android:textColor="@android:color/white"
@@ -258,10 +259,10 @@
                 <android.support.v7.widget.CardView
                     android:id="@+id/card_view_add_compare"
                     style="@style/RaisedButtonCard"
-                    android:layout_width="180dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/card_view_store"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_gravity="center_horizontal"
                     android:foreground="?attr/selectableItemBackground"
                     app:cardBackgroundColor="@color/categoryColor">
@@ -273,20 +274,20 @@
                         android:layout_alignParentLeft="true"
                         android:layout_gravity="left|center_vertical"
                         android:src="@drawable/ic_compare_bar"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="5dp"/>
 
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
                         style="@style/RaisedButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingEnd="20dp"
-                        android:paddingStart="40dp"
+                        android:paddingLeft="5dp"
+                        android:paddingStart="30dp"
                         android:text="@string/product_compare"
                         android:textSize="16sp"
                         android:textColor="@android:color/white"
                         app:typeFaceAsset="RobotoLight.ttf"/>
                 </android.support.v7.widget.CardView>
-                </RelativeLayout>
+                </LinearLayout>
 
             </LinearLayout>
         <!--</ScrollView>-->
