--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -84,7 +84,7 @@
         android:background="@android:color/transparent"
         android:gravity="center_vertical"
         android:hint="@string/search_hint"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionSearch"
         android:inputType="textFilter"
         android:maxLines="1"
         android:textAllCaps="true"
