--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -47,9 +47,9 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:ellipsize="end"
                 android:gravity="left"
-                android:maxLines="1"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/nameProductColor"
                 style="@style/textNameProduct"
@@ -73,6 +73,7 @@
                 android:textStyle="normal"
                 android:padding="5dp"
                 app:typeFaceAsset="RobotoLight.ttf"
+                android:visibility="gone"
                 tools:text="iPhone SE MLXN2TH/A"/>
 
             <LinearLayout
