--- a/app/src/main/res/layout/list_item_selected_store.xml
+++ b/app/src/main/res/layout/list_item_selected_store.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
-            android:clickable="true"
+            android:clickable="false"
             android:buttonTint="@color/powerBuyPurple"
             />
 
