--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -58,6 +58,23 @@
                 tools:text="APPLE" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_product_brand"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/nameProductColor"
+                style="@style/textNameProduct"
+                android:padding="5dp"
+                app:typeFaceAsset="RobotoLight.ttf"
+                tools:text="APPLE" />
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_product_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
