--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,11 @@
         <item name="android:textColor">@color/contentTextColor</item>
     </style>
 
+    <style name="descriptionProduct">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/contentTextColor</item>
+    </style>
+
     <style name="textNameCategory">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
