--- a/app/src/main/res/layout/list_item_grid_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_grid_compare_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp"
     tools:context=".activity.CompareActivity"
     >
@@ -31,6 +31,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="500dp"
         android:background="@color/powerBuyWhite"/>
 </RelativeLayout>
