--- a/app/src/main/res/layout/list_item_text_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_text_compare_detail.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/border_grey"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -10,11 +10,13 @@
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="16sp"
+        android:padding="10dp"
         android:textStyle="normal"
         android:textColor="#282828"
         android:gravity="center"
+        android:inputType="textMultiLine"
         android:layout_centerVertical="true"
         tools:text="Yes"
         app:typeFaceAsset="RobotoLight.ttf"
