--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,4 +136,14 @@
         <item name="cardCornerRadius">@dimen/raised_button_cardCornerRadius</item>
     </style>
 
+    <style name="TextWrapperStyle" parent="Theme.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">#4CA1A1A1</item>
+        <item name="android:textSize">16sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">#4CA1A1A1</item>
+        <item name="colorControlNormal">#4CA1A1A1</item>
+        <item name="colorControlActivated">#FF000000</item>
+    </style>
+
 </resources>
