--- a/app/src/main/res/layout/list_item_avaliable_detail.xml
+++ b/app/src/main/res/layout/list_item_avaliable_detail.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="left|center_vertical"
+            android:gravity="left"
             android:layout_gravity="center"
             android:textSize="16sp"
             android:inputType="textMultiLine"
