--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginBottom="20dp"
-                        android:foreground="?attr/selectableItemBackground"
+                        android:foreground="?android:attr/selectableItemBackground"
                         app:cardBackgroundColor="@color/categoryColor">
 
                         <cenergy.central.com.pwb_store.view.PowerBuyTextView
