Adapter - Improve image default in view holder

--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -102,5 +102,5 @@
         android:layout_marginRight="10dp"
         android:padding="6dp"
         android:src="@drawable/ic_barcode_scan"
-        android:background="?attr/selectableItemBackground"/>
+        android:background="?android:attr/selectableItemBackground"/>
 </RelativeLayout>
