--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -29,7 +29,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/ic_pwb_logo_detail" />
 
         <LinearLayout
             android:layout_width="match_parent"
