CompareActivity add button "Add to Cart" on Toolbar

--- a/app/src/main/res/layout/app_bar_compare.xml
+++ b/app/src/main/res/layout/app_bar_compare.xml
@@ -13,8 +13,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimary"
         android:theme="@style/ToolbarBack"
         app:contentInsetEnd="0dp"
         app:contentInsetLeft="0dp"
@@ -27,7 +27,8 @@
             android:layout_width="56dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_logo"/>
+            android:src="@mipmap/ic_logo"
+            android:contentDescription="@string/app_name" />
 
         <ImageView
             android:id="@+id/search_button"
@@ -36,8 +37,17 @@
             android:layout_centerInParent="true"
             android:layout_gravity="end"
             android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_search_bar"
-            />
+            android:contentDescription="@string/app_name" />
+
+        <cenergy.central.com.pwb_store.view.PowerBuyShoppingCartView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="end"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
 
     </android.support.v7.widget.Toolbar>
 
