--- a/app/src/main/res/layout/list_item_compare_product.xml
+++ b/app/src/main/res/layout/list_item_compare_product.xml
@@ -7,6 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     android:orientation="horizontal"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
@@ -17,7 +21,7 @@
         android:id="@+id/layout_card"
         android:layout_width="match_parent"
         android:layout_height="269dp"
-        android:background="?attr/selectableItemBackground">
+        android:background="?android:attr/selectableItemBackground">
         <!--android:layout_width="200dp"-->
         <!--android:layout_height="269dp">-->
 
@@ -26,8 +30,10 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentRight="true"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/ic_cancel_copy"/>
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/ic_cancel_copy"
+            android:contentDescription="@string/app_name" />
 
         <LinearLayout
             android:id="@+id/layout_image_view"
@@ -44,95 +50,78 @@
                 android:id="@+id/img_product"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
                 android:padding="10dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@drawable/ic_pwb_logo_detail"
+                android:contentDescription="@string/app_name" />
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_below="@+id/layout_image_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_below="@+id/layout_image_view"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_product_name"
+                style="@style/textNameProduct"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/nameProductColor"
+                app:typeFaceAsset="RobotoLight.ttf"
+                tools:text="APPLE"/>
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_product_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/nameProductColor"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:typeFaceAsset="RobotoLight.ttf"
+                tools:text="iPhone SE MLXN2TH/A"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_product_name"
-                    style="@style/textNameProduct"
-                    android:layout_width="match_parent"
+                    android:id="@+id/txt_product_old_price"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginStart="10dp"
-                    android:ellipsize="end"
-                    android:gravity="left"
+                    android:layout_weight="0.5"
                     android:maxLines="1"
                     android:textColor="@color/nameProductColor"
+                    android:textSize="12sp"
                     app:typeFaceAsset="RobotoLight.ttf"
-                    tools:text="APPLE"/>
+                    tools:text="16,800"/>
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_product_description"
-                    android:layout_width="match_parent"
+                    android:id="@+id/txt_product_new_price"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="10dp"
-                    android:ellipsize="end"
-                    android:gravity="left"
+                    android:layout_weight="0.5"
+                    android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/nameProductColor"
-                    android:textSize="16dp"
-                    android:textStyle="normal"
+                    android:textColor="@color/salePriceColor"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
                     app:typeFaceAsset="RobotoLight.ttf"
-                    tools:text="iPhone SE MLXN2TH/A"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/txt_product_old_price"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:layout_marginRight="2dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="left"
-                        android:maxLines="1"
-                        android:textColor="@color/nameProductColor"
-                        android:textSize="12sp"
-                        app:typeFaceAsset="RobotoLight.ttf"
-                        tools:text="16,800"/>
-
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/txt_product_new_price"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="2dp"
-                        android:gravity="right"
-                        android:maxLines="1"
-                        android:textColor="@color/salePriceColor"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:typeFaceAsset="RobotoLight.ttf"
-                        tools:text="12,600"/>
-
-                </LinearLayout>
+                    tools:text="12,600"/>
 
             </LinearLayout>
-        </RelativeLayout>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
