EO-13 Improve layout compare detail

--- a/app/src/main/res/layout/fragment_compare.xml
+++ b/app/src/main/res/layout/fragment_compare.xml
@@ -2,13 +2,13 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/powerBuyWhite">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingLeft="4dp"
