--- a/app/src/main/res/layout/list_item_grid_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_grid_compare_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:paddingBottom="16dp"
     tools:context=".activity.CompareActivity"
     >
     <!--
@@ -31,6 +31,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
         android:background="@color/powerBuyWhite"/>
 </RelativeLayout>
