--- a/app/src/main/res/layout/list_item_product_filter_header.xml
+++ b/app/src/main/res/layout/list_item_product_filter_header.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/img_fill_back"
